[package]
name = "cacabake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.2" # for simpler arguments handling
crossterm = "0.27.0" # for manipulating the terminal
essi-ffmpeg = "0.2.0" # for decomposing video into frames
ffprobe = "0.4.0" # for getting video stats (framerate)
evalexpr = "11.3.0" # for evaluating string math expressions (again framerate)
tokio = { version = "1.37.0", features = ["full"] }
indicatif = "0.17.8" # for the progress bar UwU